--- a/front/src/index.css
+++ b/front/src/index.css
@@ -23,11 +23,24 @@ code {
 
 .navbar-brand{
 	color:white;
+padding: 10px 50px 50px;
+}
+
+.navbar-nav{
+
+  float: right;
+
 }
 
 .nav-item{
 	color:white;
 }
+
+.nav-cart{
+  color:white;
+  display: block;
+}
+
 
 .shop-go{
 	background:#E9A2F2;
