--- a/front/src/index.css
+++ b/front/src/index.css
@@ -6,12 +6,33 @@ body navbar {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color:#3FBFA8;
-
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.table{
+  display: table;
+  margin: 0 auto;
+}
+
+.navbar-nav{
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
+  align-items: center;
+  flex-grow: 1;
+  list-style: none;
+}
+
+.navbar-nav li {
+  display: inline;
 }
 
 .navbar{
