--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,111 +1,90 @@
-
-
 body navbar {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:#3FBFA8;
+  background-color: #3fbfa8;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   min-height: 10vh;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.table{
-  display: table;
-  margin: 0 auto;
-}
-
-.navbar-nav{
+div.navbar-nav {
   display: flex;
-  width: 50%;
-  justify-content: space-around;
-  align-items: center;
-  flex-grow: 1;
-  list-style: none;
+  flex-direction: row;
 }
 
-.navbar-nav li {
-  display: inline;
+.navbar {
+  background-color: #3fbfa8;
 }
 
-.navbar{
-	background-color:#3FBFA8;
-	
+.navbar-brand {
+  color: white;
+  padding: 10px 50px 50px;
 }
 
-.navbar-brand{
-	color:white;
-padding: 10px 50px 50px;
-}
-
-.navbar-nav{
-
+.navbar-nav {
   float: right;
-
 }
 
-.nav-item{
-	color:white;
+.nav-item {
+  color: white;
 }
 
-.nav-cart{
-  color:white;
+.nav-cart {
+  color: white;
   display: block;
 }
 
-
-.shop-go{
-	background:#E9A2F2;
- color: white;
-  width:80px;
-  height:30px;
+.shop-go {
+  background: #e9a2f2;
+  color: white;
+  width: 80px;
+  height: 30px;
   margin: 5px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border-radius: 50px;
-  font-size:11px;
-  line-height:32px;
+  font-size: 11px;
+  line-height: 32px;
   text-transform: uppercase;
-
 }
 
-.item-remove
-{
-		background:#3FBFA8;
- color: white;
-  width:80px;
-  height:30px;
+.item-remove {
+  background: #3fbfa8;
+  color: white;
+  width: 80px;
+  height: 30px;
   margin: 5px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border-radius: 50px;
-  font-size:11px;
-  line-height:32px;
+  font-size: 11px;
+  line-height: 32px;
   text-transform: uppercase;
 }
 
-.mdb-select{
-@include appearance(none);
+.mdb-select {
+  @include appearance(none);
   text-indent: 0.01px;
-  text-overflow: '';
-  
+  text-overflow: "";
+
   padding: 1em 0 1em 1em;
   /* Targetting Webkit browsers only. FF will show the dropdown arrow with so much padding.
   via: https://cssdeck.com/labs/styling-select-box-with-css3 */
-  @media screen and (-webkit-min-device-pixel-ratio:0) {
-    padding-right:1em;
+  @media screen and (-webkit-min-device-pixel-ratio: 0) {
+    padding-right: 1em;
   }
   border: 1px solid;
-  border-color: #3FBFA8;
+  border-color: #3fbfa8;
   border-radius: 0;
   position: relative;
   border-right-width: 20px;
@@ -114,10 +93,6 @@ padding: 10px 50px 50px;
   text-transform: uppercase;
   &:focus {
     outline: none;
-    border-color: lighten(#3FBFA8, 10%);
+    border-color: lighten(#3fbfa8, 10%);
   }
 }
-
-
-
-
