--- a/front/src/index.css
+++ b/front/src/index.css
@@ -37,8 +37,15 @@ div.navbar-nav {
 
 .navbar-brand {
   color: white;
-  padding: 2rem 2rem 2rem 2rem;
+  width:450px;
+
 }
+
+.navbar-brand img{
+max-width:500px; margin-top: -7px;
+padding-right:2rem;
+}
+
 
 .navbar-nav {
   float: right;
