sirve cambiar el total mal pero lo hace

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -26,6 +26,14 @@ div.navbar-nav {
   width: 20rem;
 }
 
+.add {
+  width: 40rem;
+}
+
+.add shop-go{
+  justify-content: center;
+}
+
 .shop-list-item img{
   width: 15rem;
   justify-content: flex-start;
