--- a/front/src/index.css
+++ b/front/src/index.css
@@ -29,8 +29,8 @@ padding-top: 1rem;
 h1,h2,h3{
 font-family: 'Raleway', sans-serif;
 }
-.label{
-  font-family: 'Raleway', sans-serif;
+.label-input{
+  font-family: 'Lato', sans-serif;
 }
 
 p{
