--- a/front/src/index.css
+++ b/front/src/index.css
@@ -20,6 +20,14 @@ code {
 padding-top: 10rem;
 }
 
+.store{
+padding-top: 5rem;
+}
+
+.shop-list{
+padding-top: 3rem;
+}
+
 .products-resume{
 padding-top: 1rem;
 }
