--- a/front/src/index.css
+++ b/front/src/index.css
@@ -87,8 +87,9 @@ div.navbar-nav {
 }
 
 .navbar-brand img{
-max-width:500px; margin-top: -7px;
-padding-right:2rem;
+max-width:100px; margin-top: -7px;
+padding-right:1rem;
+padding-left:2rem;
 }
 
 
