--- a/front/src/index.css
+++ b/front/src/index.css
@@ -32,8 +32,15 @@ padding-top: 3rem;
 .products-resume{
 padding-top: 1rem;
 }
+
+.container-scan{
+  padding: 4rem;
+}
+
 .add-cart{
-padding-top: 1rem;
+
+justify-content: center;
+padding: 5rem;
 }
 h1,h2,h3{
 font-family: 'Raleway', sans-serif;
@@ -60,11 +67,12 @@ div.navbar-nav {
 }
 
 .shop-list-item{
-  width: 40rem;
+ width: 40rem;
+ height: 15rem;
 }
 
 .add {
-  width: 40rem;
+padding: 2rem;
 }
 
 .add shop-go{
@@ -108,6 +116,19 @@ padding-left:2rem;
 
 .shop-go {
   background: #e9a2f2;
+  color: white;
+  width: 80px;
+  height: 30px;
+  margin: 5px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  font-size: 11px;
+  line-height: 32px;
+  text-transform: uppercase;
+}
+.shop-goto {
+  background: #3fbfa8;
   color: white;
   width: 80px;
   height: 30px;
